

[project]
name = "morpholayers"
version = "0.1.0"

authors = [
  { name="Santiago Velasco-Forero", email="Santiago.Velasco@minesparis.psl.eu" },
]

description = "Morphological layers for Tensorflow"

readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#dependencies = [
#    'tensorflow>=2.4.0',
#    'numpy>=1.19.9',
#    #'scipy>=1.4.1',
#    #'scikit-image >= 0.15',
#]

[project.urls]
"Homepage" = "https://github.com/jacobiano/morpholayers"
"Bug Tracker" = "https://github.com/jacobiano/morpholayers/issues"

